<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTitle"
                    android:background="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:includeFontPadding="true"
                    android:paddingVertical="15dp"
                    android:text="@string/practical_test_e2145293"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/transparentWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/location_data"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCoordinates"
                    android:background="@color/transparentWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-condensed-light"
                    android:paddingVertical="2dp"
                    android:paddingStart="20dp"
                    android:text="@string/latitude_longitude_data"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/transparentWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/reverse_geo_coded_data"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtAddress"
                    android:background="@color/transparentWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-condensed-light"
                    android:paddingVertical="2dp"
                    android:paddingStart="20dp"
                    android:text="@string/geo_coded_address_data"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:background="@color/transparentWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/current_system_time"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTime"
                    android:background="@color/transparentWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-condensed-light"
                    android:paddingVertical="2dp"
                    android:paddingStart="20dp"
                    android:text="@string/system_time"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="0dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    app:contentPadding="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageIcon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintBottom_toBottomOf="@+id/btnRefresh"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/btnRefresh"
                            app:srcCompat="@android:drawable/ic_dialog_info" />

                        <TextView
                            android:id="@+id/txtCondition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageIcon"
                            app:layout_constraintStart_toEndOf="@+id/imageIcon"
                            app:layout_constraintTop_toTopOf="@+id/imageIcon" />

                        <Button
                            android:id="@+id/btnRefresh"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/baseline_refresh_24"
                            android:backgroundTint="@color/white"
                            android:elevation="2dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/baseline_refresh_24" />


                        <TextView
                            android:id="@+id/txtTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_24_5_c"
                            android:textSize="80sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/btnRefresh" />

                        <TextView
                            android:id="@+id/txtHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/humdity_71"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtTemperature" />

                        <TextView
                            android:id="@+id/txtLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/location_name"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtHumidity" />

                        <TextView
                            android:id="@+id/txtDescription"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-condensed-light"
                            android:padding="5dp"
                            android:text="@string/description_text_goes_here"
                            android:textAlignment="viewStart"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtLocation" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:elevation="2dp"
        android:shadowColor="#000000"
        android:text="Exit"
        app:icon="@drawable/baseline_power_settings_new_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/data_provided_by_weatherapi_com"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>