<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_bg" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subTxtTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:includeFontPadding="true"
                    android:paddingVertical="15dp"
                    android:text="@string/practical_test_e2145293"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/transparentWhite"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="2dp"
                    android:paddingStart="10dp"
                    android:text="Search Location:"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/subEditTextSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed-light"
                    android:inputType="text"
                    android:paddingVertical="2dp"
                    android:paddingStart="20dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/subBtnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Search"
                    app:icon="@drawable/baseline_search_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/transparentWhite"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="2dp"
                    android:paddingStart="10dp"
                    android:text="Geo-coded Address"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subTxtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/transparentWhite"
                    android:fontFamily="sans-serif-condensed-light"
                    android:paddingVertical="2dp"
                    android:paddingStart="20dp"
                    android:text="@string/geo_coded_address_data"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/transparentWhite"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="2dp"
                    android:paddingStart="10dp"
                    android:text="@string/current_system_time"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subTxtTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/transparentWhite"
                    android:fontFamily="sans-serif-condensed-light"
                    android:paddingVertical="2dp"
                    android:paddingStart="20dp"
                    android:text="@string/system_time"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="90dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="0dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    app:contentPadding="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/subImageIcon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:layout_constraintBottom_toBottomOf="@+id/btnRefresh"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/btnRefresh"
                            app:srcCompat="@android:drawable/ic_dialog_info" />

                        <TextView
                            android:id="@+id/subTxtCondition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/subImageIcon"
                            app:layout_constraintStart_toEndOf="@+id/subImageIcon"
                            app:layout_constraintTop_toTopOf="@+id/subImageIcon" />


                        <TextView
                            android:id="@+id/subTxtTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_24_5_c"
                            android:textSize="80sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/subImageIcon" />

                        <TextView
                            android:id="@+id/subTxtHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/humdity_71"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/subTxtTemperature" />

                        <TextView
                            android:id="@+id/subTxtLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/location_name"
                            android:textSize="20sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/subTxtHumidity" />

                        <TextView
                            android:id="@+id/subTxtDescription"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-condensed-light"
                            android:padding="5dp"
                            android:text="@string/description_text_goes_here"
                            android:textAlignment="viewStart"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/subTxtLocation" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/subBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:elevation="2dp"
        android:shadowColor="#000000"
        android:text="Back"
        app:icon="@drawable/baseline_navigate_before_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>